--- a/melos.yaml
+++ b/melos.yaml
@@ -12,25 +12,26 @@ command:
       sdk: ^3.5.0
       flutter: ^3.24.0
     dependencies:
-      collection:
-      flutter_hooks: 
-      freezed_annotation:
-      go_router: 
-      hooks_riverpod: 
-      intl: 
-      json_annotation: 
-      logger:
-      riverpod_annotation: 
+      collection: any
+      flutter_hooks: any
+      freezed_annotation: any
+      go_router: any
+      hooks_riverpod: any
+      intl: any
+      json_annotation: any
+      logger: any
+      riverpod_annotation: any
     dev_dependencies:
-      build_runner: 
-      custom_lint: 
-      freezed: 
-      json_serializable: 
-      pedantic_mono:
-      riverpod_generator: 
-      riverpod_lint: 
-      test: 
-      flutter_gen_runner: 
+      build_runner: any
+      custom_lint: any
+      flutter_gen_runner: any
+      freezed: any
+      json_serializable: any
+      nilts: any
+      pedantic_mono: any
+      riverpod_generator: any
+      riverpod_lint: any
+      test: any
     hooks:
       post: grind generate-package-labels && grind generate-package-labeler
   clean:
