🐛fix: `flutter_settings_ui`のtrailing表示バグを修正

--- a/packages/features/setting/pubspec.yaml
+++ b/packages/features/setting/pubspec.yaml
@@ -24,12 +24,12 @@ dependencies:
   flutter_hooks:
   flutter_localizations:
     sdk: flutter
-  flutter_settings_ui: 
   hooks_riverpod: 
   intl: 
   material_design_icons_flutter:
   nested: 
-  riverpod_annotation: 
+  riverpod_annotation:
+  settings_ui: 
   slang: 
   slang_flutter: 
 
