--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -55,6 +55,8 @@ flutter:
 
 flutter_gen:
   output: lib/src/gen/assets
+  integrations:
+    flutter_svg: true
   assets:
     outputs:
       package_parameter_enabled: true
