--- a/packages/cores/core/pubspec.yaml
+++ b/packages/cores/core/pubspec.yaml
@@ -14,12 +14,12 @@ dependencies:
     sdk: flutter
   flutter_hooks:
   freezed_annotation:
-  hooks_riverpod: 
+  hooks_riverpod: ^2.6.1 
   intl:
   json_annotation:
   logger:
   nested:
-  riverpod_annotation: 
+  riverpod_annotation: ^2.6.1 
   slang: 
   slang_flutter: 
   version:
@@ -34,6 +34,6 @@ dev_dependencies:
   json_serializable:
   nilts: any
   pedantic_mono:
-  riverpod_generator: 
-  riverpod_lint: 
+  riverpod_generator: ^2.6.1 
+  riverpod_lint: ^2.6.1 
   slang_build_runner: 
