--- a/packages/cores/data/pubspec.yaml
+++ b/packages/cores/data/pubspec.yaml
@@ -16,13 +16,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks:
-  hooks_riverpod: 
-  riverpod_annotation: 
+  hooks_riverpod: ^2.6.1 
+  riverpod_annotation: ^2.6.1 
   shared_preferences: 
 
 dev_dependencies:
   build_runner: 
   custom_lint: 
   pedantic_mono:
-  riverpod_generator: 
-  riverpod_lint: 
+  riverpod_generator: ^2.6.1 
+  riverpod_lint: ^2.6.1 
