--- a/packages/cores/firebase/pubspec.yaml
+++ b/packages/cores/firebase/pubspec.yaml
@@ -24,8 +24,8 @@ dependencies:
     sdk: flutter
   freezed_annotation: 
   google_sign_in: 
-  hooks_riverpod: 
-  riverpod_annotation: 
+  hooks_riverpod: ^2.6.1 
+  riverpod_annotation: ^2.6.1 
 
 dev_dependencies:
   build_runner: 
@@ -33,6 +33,6 @@ dev_dependencies:
     sdk: flutter
   nilts: any
   pedantic_mono: 
-  riverpod_generator: 
-  riverpod_lint: 
+  riverpod_generator: ^2.6.1 
+  riverpod_lint: ^2.6.1 
   test: any
