--- a/packages/features/user/pubspec.yaml
+++ b/packages/features/user/pubspec.yaml
@@ -30,11 +30,11 @@ dependencies:
     sdk: flutter
   freezed_annotation:
   gap:
-  hooks_riverpod:
+  hooks_riverpod: ^2.6.1
   intl:
   material_design_icons_flutter:
   nested:
-  riverpod_annotation:
+  riverpod_annotation: ^2.6.1
   slang:
   slang_flutter:
 
@@ -48,8 +48,8 @@ dev_dependencies:
   json_serializable:
   nilts: any
   pedantic_mono:
-  riverpod_generator:
-  riverpod_lint:
+  riverpod_generator: ^2.6.1
+  riverpod_lint: ^2.6.1
   slang_build_runner:
 
 flutter:
