--- a/packages/features/app_update/pubspec.yaml
+++ b/packages/features/app_update/pubspec.yaml
@@ -1,6 +1,6 @@
 name: features_app_update
 description: "This package provides app_update features."
-publish_to: 'none'
+publish_to: "none"
 version: 0.0.1
 
 environment:
@@ -8,7 +8,8 @@ environment:
   flutter: ^3.24.0
 
 dependencies:
-  collection:
+  adaptive_dialog: null
+  collection: null
   cores_core:
     path: ../../cores/core
   cores_data:
@@ -19,27 +20,28 @@ dependencies:
     path: ../../cores/firebase
   flutter:
     sdk: flutter
-  flutter_hooks: 
+  flutter_hooks: null
   flutter_localizations:
     sdk: flutter
-  freezed_annotation: 
-  hooks_riverpod: ^2.6.1 
-  intl: 
-  nested: 
-  riverpod_annotation: ^2.6.1 
-  slang: 
-  slang_flutter: 
-  version: 
+  freezed_annotation: null
+  hooks_riverpod: ^2.6.1
+  intl: null
+  nested: null
+  riverpod_annotation: ^2.6.1
+  slang: null
+  slang_flutter: null
+  store_redirect:
+  version: null
 
 dev_dependencies:
-  build_runner: 
-  custom_lint: 
+  build_runner: null
+  custom_lint: null
   flutter_test:
     sdk: flutter
   freezed: any
-  json_serializable: 
+  json_serializable: null
   nilts: any
-  pedantic_mono: 
-  riverpod_generator: ^2.6.1 
-  riverpod_lint: ^2.6.1 
-  slang_build_runner: 
+  pedantic_mono: null
+  riverpod_generator: ^2.6.1
+  riverpod_lint: ^2.6.1
+  slang_build_runner: null
