--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -8,45 +8,46 @@ environment:
   flutter: ^3.24.0
 
 dependencies:
-  animations: 
-  collection:
+  animations: null
+  collection: null
   cores_core:
     path: ../core
   cores_shared_preferences:
     path: ../shared_preferences
-  dynamic_color:
+  dynamic_color: null
   flutter:
     sdk: flutter
-  flutter_hooks:
-  flutter_svg:
-  freezed_annotation: 
-  gap: 
-  gauge_indicator: 
-  hooks_riverpod: ^2.6.1 
-  linked_scroll_controller: 
-  material_color_utilities:
-  nested: 
-  riverpod_annotation: ^2.6.1 
-  shimmer:
-  slang: 
-  slang_flutter: 
-  sliver_tools:
-  theme_tailor_annotation:  
-  url_launcher:
+  flutter_hooks: null
+  flutter_svg: null
+  freezed_annotation: null
+  gap: null
+  gauge_indicator: null
+  hooks_riverpod: ^2.6.1
+  linked_scroll_controller: null
+  material_color_utilities: null
+  nested: null
+  responsive_framework: ^1.5.1
+  riverpod_annotation: ^2.6.1
+  shimmer: null
+  slang: null
+  slang_flutter: null
+  sliver_tools: null
+  theme_tailor_annotation: null
+  url_launcher: null
 
 dev_dependencies:
-  build_runner: 
-  custom_lint: 
-  flutter_gen_runner: 
+  build_runner: null
+  custom_lint: null
+  flutter_gen_runner: null
   flutter_test:
     sdk: flutter
-  freezed:
+  freezed: null
   nilts: any
-  pedantic_mono:
-  riverpod_generator: ^2.6.1 
-  riverpod_lint: ^2.6.1 
-  slang_build_runner: 
-  theme_tailor: 
+  pedantic_mono: null
+  riverpod_generator: ^2.6.1
+  riverpod_lint: ^2.6.1
+  slang_build_runner: null
+  theme_tailor: null
 
 flutter:
   uses-material-design: true
