--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_app
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.0.1
 
 environment:
@@ -20,7 +20,8 @@ dependencies:
     path: ../../packages/cores/firebase
   cores_shared_preferences:
     path: ../../packages/cores/shared_preferences
-  cupertino_icons: 
+  cupertino_icons: null
+  device_preview: ^1.2.0
   features_app_update:
     path: ../../packages/features/app_update
   features_goods:
@@ -40,15 +41,15 @@ dependencies:
   freezed_annotation: any
   gap: any
   go_router: any
-  hooks_riverpod: ^2.6.1 
+  hooks_riverpod: ^2.6.1
   intl: any
   json_annotation: any
-  nested: 
+  nested: null
   package_info_plus: ^5.0.1
-  riverpod_annotation: ^2.6.1 
-  slang: 
-  slang_flutter: 
-  version: 
+  riverpod_annotation: ^2.6.1
+  slang: null
+  slang_flutter: null
+  version: null
 
 dev_dependencies:
   build_runner: any
@@ -62,8 +63,8 @@ dev_dependencies:
   json_serializable: any
   nilts: any
   pedantic_mono: any
-  riverpod_generator: ^2.6.1 
-  riverpod_lint: ^2.6.1 
+  riverpod_generator: ^2.6.1
+  riverpod_lint: ^2.6.1
 
 flutter:
   uses-material-design: true
