🔧chore: Lintログを対象外に変更

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@
 # mason related
 /.mason
 
+# Lintlog
+custom_lint.log
+
 # https://github.com/felangel/mason/issues/947
 # `mason get`すると内容が絶対パスに書き換わるためバージョン管理しない
 /mason-lock.json
