--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@
 # mason related
 /.mason
 
-# Lintlog
-custom_lint.log
+# Lint log
+/custom_lint.log
 
 # https://github.com/felangel/mason/issues/947
 # `mason get`すると内容が絶対パスに書き換わるためバージョン管理しない
