--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,37 +1,43 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "dev-debug",
-            "cwd": "apps/app",
-            "request": "launch",
-            "program": "lib/main.dart",
-            "type": "dart",
-            "args": [
-                "--dart-define-from-file=flavor/dev.json",
-                "--web-renderer html",
-            ]
-        },
-        {
-            "name": "prd-debug",
-            "cwd": "apps/app",
-            "request": "launch",
-            "program": "lib/main.dart",
-            "type": "dart",
-            "args": [
-                "--dart-define-from-file=flavor/prd.json",
-                "--web-renderer html",
-            ]
-        },
-        {
-            "name": "ui-catalog",
-            "cwd": "apps/catalog",
-            "request": "launch",
-            "program": "lib/main.dart",
-            "type": "dart",
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "dev-debug",
+      "cwd": "apps/app",
+      "request": "launch",
+      "program": "lib/main.dart",
+      "type": "dart",
+      "args": ["--dart-define-from-file=flavor/dev.json", "--web-renderer html"]
+    },
+    {
+      "name": "prd-debug",
+      "cwd": "apps/app",
+      "request": "launch",
+      "program": "lib/main.dart",
+      "type": "dart",
+      "args": ["--dart-define-from-file=flavor/prd.json", "--web-renderer html"]
+    },
+    {
+      "name": "device-preview",
+      "cwd": "apps/app",
+      "request": "launch",
+      "program": "lib/main.dart",
+      "type": "dart",
+      "args": [
+        "--dart-define-from-file=flavor/dev.json",
+        "--web-renderer html",
+        "--dart-define=devicePreview=true"
+      ]
+    },
+    {
+      "name": "ui-catalog",
+      "cwd": "apps/catalog",
+      "request": "launch",
+      "program": "lib/main.dart",
+      "type": "dart"
+    }
+  ]
 }
