✨feat: golden_test実装

--- a/melos.yaml
+++ b/melos.yaml
@@ -22,6 +22,7 @@ command:
       logger: any
       riverpod_annotation: ^2.6.1
     dev_dependencies:
+      alchemist: ^0.10.0
       build_runner: any
       custom_lint: any
       flutter_gen_runner: any
