--- a/packages/features/goods/pubspec.yaml
+++ b/packages/features/goods/pubspec.yaml
@@ -1,6 +1,6 @@
 name: features_goods
 description: "This package provides goods features."
-publish_to: 'none'
+publish_to: "none"
 version: 0.0.1
 
 environment:
@@ -8,9 +8,9 @@ environment:
   flutter: ^3.24.4
 
 dependencies:
-  animations: 
-  clock: 
-  collection:
+  animations: null
+  clock: null
+  collection: null
   cores_core:
     path: ../../cores/core
   cores_data:
@@ -21,32 +21,33 @@ dependencies:
     path: ../../cores/error
   flutter:
     sdk: flutter
-  flutter_hooks: any 
+  flutter_hooks: any
   flutter_localizations:
     sdk: flutter
-  freezed_annotation: any 
-  gap: 
-  hooks_riverpod: ^2.6.1 
-  intl: 
+  freezed_annotation: any
+  gap: null
+  hooks_riverpod: ^2.6.1
+  intl: null
   json_annotation: any
-  nested: 
-  riverpod_annotation: ^2.6.1 
-  riverpod_paging_utils:
-  slang: 
-  slang_flutter: 
+  nested: null
+  riverpod_annotation: ^2.6.1
+  riverpod_paging_utils: null
+  slang: null
+  slang_flutter: null
 
 dev_dependencies:
-  build_runner: any 
-  custom_lint: any 
+  alchemist: ^0.10.0
+  build_runner: any
+  custom_lint: any
   flutter_test:
     sdk: flutter
   freezed: any
-  json_serializable: any 
+  json_serializable: any
   nilts: any
-  pedantic_mono: 
-  riverpod_generator: ^2.6.1 
-  riverpod_lint: ^2.6.1 
-  slang_build_runner: 
+  pedantic_mono: null
+  riverpod_generator: ^2.6.1
+  riverpod_lint: ^2.6.1
+  slang_build_runner: null
 
 flutter:
   uses-material-design: true
