--- a/melos.yaml
+++ b/melos.yaml
@@ -21,6 +21,8 @@ command:
       json_annotation: any
       logger: any
       riverpod_annotation: ^2.6.1
+      slang: ^4.1.0
+      slang_flutter: ^4.1.0
     dev_dependencies:
       alchemist: ^0.10.0
       build_runner: any
@@ -32,6 +34,7 @@ command:
       pedantic_mono: any
       riverpod_generator: ^2.6.1
       riverpod_lint: ^2.6.1
+      slang_build_runner: ^4.1.0
       test: any
     hooks:
       post: grind generate-package-labels && grind generate-package-labeler
