--- a/packages/features/goods/pubspec.yaml
+++ b/packages/features/goods/pubspec.yaml
@@ -32,8 +32,8 @@ dependencies:
   nested: null
   riverpod_annotation: ^2.6.1
   riverpod_paging_utils: null
-  slang: null
-  slang_flutter: null
+  slang: ^4.1.0
+  slang_flutter: ^4.1.0
 
 dev_dependencies:
   alchemist: ^0.10.0
@@ -47,7 +47,7 @@ dev_dependencies:
   pedantic_mono: null
   riverpod_generator: ^2.6.1
   riverpod_lint: ^2.6.1
-  slang_build_runner: null
+  slang_build_runner: ^4.1.0
 
 flutter:
   uses-material-design: true
