--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
   responsive_framework: ^1.5.1
   riverpod_annotation: ^2.6.1
   shimmer: null
-  slang: null
-  slang_flutter: null
+  slang: ^4.1.0
+  slang_flutter: ^4.1.0
   sliver_tools: null
   theme_tailor_annotation: null
   url_launcher: null
@@ -46,7 +46,7 @@ dev_dependencies:
   pedantic_mono: null
   riverpod_generator: ^2.6.1
   riverpod_lint: ^2.6.1
-  slang_build_runner: null
+  slang_build_runner: ^4.1.0
   theme_tailor: null
 
 flutter:
