--- a/packages/cores/error/pubspec.yaml
+++ b/packages/cores/error/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   hooks_riverpod: ^2.6.1 
   nested: 
   riverpod_annotation: ^2.6.1 
-  slang: 
-  slang_flutter: 
+  slang: ^4.1.0 
+  slang_flutter: ^4.1.0 
 
 dev_dependencies:
   build_runner: 
@@ -33,5 +33,5 @@ dev_dependencies:
   pedantic_mono:
   riverpod_generator: ^2.6.1 
   riverpod_lint: ^2.6.1 
-  slang_build_runner: 
+  slang_build_runner: ^4.1.0 
   theme_extensions_builder: 
