--- a/packages/features/app_update/pubspec.yaml
+++ b/packages/features/app_update/pubspec.yaml
@@ -28,8 +28,8 @@ dependencies:
   intl: null
   nested: null
   riverpod_annotation: ^2.6.1
-  slang: null
-  slang_flutter: null
+  slang: ^4.1.0
+  slang_flutter: ^4.1.0
   store_redirect:
   version: null
 
@@ -44,4 +44,4 @@ dev_dependencies:
   pedantic_mono: null
   riverpod_generator: ^2.6.1
   riverpod_lint: ^2.6.1
-  slang_build_runner: null
+  slang_build_runner: ^4.1.0
