--- a/packages/features/maintenance/pubspec.yaml
+++ b/packages/features/maintenance/pubspec.yaml
@@ -27,8 +27,8 @@ dependencies:
   intl: 
   nested: 
   riverpod_annotation: ^2.6.1 
-  slang: 
-  slang_flutter: 
+  slang: ^4.1.0 
+  slang_flutter: ^4.1.0 
 
 dev_dependencies:
   build_runner: 
@@ -41,4 +41,4 @@ dev_dependencies:
   pedantic_mono: 
   riverpod_generator: ^2.6.1 
   riverpod_lint: ^2.6.1 
-  slang_build_runner: 
+  slang_build_runner: ^4.1.0 
