--- a/packages/features/setting/pubspec.yaml
+++ b/packages/features/setting/pubspec.yaml
@@ -30,8 +30,8 @@ dependencies:
   material_design_icons_flutter:
   nested: 
   riverpod_annotation: ^2.6.1
-  slang: 
-  slang_flutter: 
+  slang: ^4.1.0 
+  slang_flutter: ^4.1.0 
 
 dev_dependencies:
   build_runner: 
@@ -40,7 +40,7 @@ dev_dependencies:
   pedantic_mono:
   riverpod_generator: ^2.6.1 
   riverpod_lint: ^2.6.1 
-  slang_build_runner: 
+  slang_build_runner: ^4.1.0 
 
 flutter:
   uses-material-design: true
