--- a/packages/features/user/build.yaml
+++ b/packages/features/user/build.yaml
@@ -21,8 +21,8 @@ targets:
         generate_for:
           include:
             - lib/**/*provider.dart
-            - lib/{interface,**/interface}/*repository.dart
-            - lib/{usecase,**/usecase}/*usecase.dart
+            - lib/**/*repository.dart
+            - lib/**/*usecase.dart
       # https://github.com/dart-lang/source_gen#ignore_for_file
       source_gen:combining_builder:
         options:
