--- a/packages/cores/domain/build.yaml
+++ b/packages/cores/domain/build.yaml
@@ -5,12 +5,16 @@ targets:
         # https://github.com/dart-lang/build/blob/master/docs/faq.md#how-do-i-avoid-running-builders-on-unnecessary-inputs
         generate_for:
           include:
-            - lib/src/{model,**/model}/**.dart
+            - lib/{value_object,**/value_object}/**.dart
+            - lib/{entity,**/entity}/**.dart
+            - lib/{model,**/model}/**.dart
       # https://github.com/google/json_serializable.dart/tree/master/json_serializable#build-configuration
       json_serializable:
         generate_for:
           include:
-            - lib/src/{model,**/model}/**.dart
+            - lib/{value_object,**/value_object}/**.dart
+            - lib/{entity,**/entity}/**.dart
+            - lib/{model,**/model}/**.dart
         options:
           field_rename: snake
           # json のデシリアライズ時に発生する Exception を CheckedFromJsonException にまとめる
