--- a/packages/cores/domain/pubspec.yaml
+++ b/packages/cores/domain/pubspec.yaml
@@ -5,33 +5,23 @@ version: 0.0.1
 
 environment:
   sdk: ^3.6.0
-  flutter: ^3.27.0
 
 dependencies:
-  flutter:
-    sdk: flutter
-  flutter_hooks:
-  freezed_annotation:
-  hooks_riverpod: ^2.6.1 
-  intl:
-  json_annotation:
-  logger:
-  nested:
-  riverpod_annotation: ^2.6.1 
-  slang: ^4.1.0 
-  slang_flutter: ^4.1.0 
-  version:
-  visibility_detector:
+  freezed_annotation: null
+  intl: null
+  json_annotation: null
+  logger: null
+  riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  version: null
 
 dev_dependencies:
-  build_runner:
-  custom_lint:
-  flutter_test:
-    sdk: flutter
-  freezed:
-  json_serializable:
+  build_runner: null
+  custom_lint: null
+  freezed: null
+  index_generator: ^3.4.1
+  json_serializable: null
   nilts: any
-  pedantic_mono:
-  riverpod_generator: ^2.6.1 
-  riverpod_lint: ^2.6.1 
-  slang_build_runner: ^4.1.0 
+  pedantic_mono: null
+  riverpod_generator: ^2.6.1
+  riverpod_lint: ^2.6.1
