--- a/packages/infrastructure/firebase/pubspec.yaml
+++ b/packages/infrastructure/firebase/pubspec.yaml
@@ -1,38 +1,39 @@
 name: infrastructure_firebase
 description: "A new Flutter package project."
 version: 0.0.1
-publish_to: 'none'
+publish_to: "none"
 
 environment:
   sdk: ^3.6.0
   flutter: ^3.27.0
 
 dependencies:
-  cloud_firestore:
-  cloud_functions:
-  collection: 
+  cloud_firestore: null
+  cloud_functions: null
+  collection: null
   cores_domain:
     path: ../../cores/domain
-  firebase_analytics:
-  firebase_app_check:
-  firebase_auth:
-  firebase_core:
-  firebase_crashlytics:
-  firebase_remote_config:
-  firebase_storage:
+  firebase_analytics: null
+  firebase_app_check: null
+  firebase_auth: null
+  firebase_core: null
+  firebase_crashlytics: null
+  firebase_remote_config: null
+  firebase_storage: null
   flutter:
     sdk: flutter
-  freezed_annotation: 
-  google_sign_in: 
-  hooks_riverpod: ^2.6.1 
-  riverpod_annotation: ^2.6.1 
+  freezed_annotation: null
+  google_sign_in: null
+  riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  versionarte: ^1.2.3
 
 dev_dependencies:
-  build_runner: 
+  build_runner: null
   flutter_test:
     sdk: flutter
   nilts: any
-  pedantic_mono: 
-  riverpod_generator: ^2.6.1 
-  riverpod_lint: ^2.6.1 
+  pedantic_mono: null
+  riverpod_generator: ^2.6.1
+  riverpod_lint: ^2.6.1
   test: any
