--- a/packages/infrastructure/firebase/pubspec.yaml
+++ b/packages/infrastructure/firebase/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   google_sign_in: null
   riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
-  versionarte: ^1.2.3
+  version: ^3.0.2
 
 dev_dependencies:
   build_runner: null
