--- a/packages/infrastructure/firebase/pubspec.yaml
+++ b/packages/infrastructure/firebase/pubspec.yaml
@@ -22,8 +22,10 @@ dependencies:
   firebase_storage: null
   flutter:
     sdk: flutter
+  freezed: ^2.5.7
   freezed_annotation: null
   google_sign_in: null
+  json_annotation: null
   riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
   version: ^3.0.2
@@ -32,6 +34,7 @@ dev_dependencies:
   build_runner: null
   flutter_test:
     sdk: flutter
+  json_serializable: null
   nilts: any
   pedantic_mono: null
   riverpod_generator: ^2.6.1
