--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
   flutter: ^3.27.0
 
 dependencies:
+  cores_dependency_override:
+    path: ../../packages/cores/dependency_override
   cores_designsystem:
     path: ../../packages/cores/designsystem
   cores_domain:
@@ -16,14 +18,17 @@ dependencies:
   device_preview: ^1.2.0
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.20.5
   flutter_localizations:
     sdk: flutter
+  flutter_settings_ui: ^3.0.1
   freezed_annotation: any
   gap: any
   go_router: any
   hooks_riverpod: ^2.6.1
   intl: any
   json_annotation: any
+  material_design_icons_flutter: ^7.0.7296
   nested: null
   package_info_plus: ^5.0.1
   riverpod_annotation: ^2.6.1
@@ -35,6 +40,8 @@ dev_dependencies:
   build_runner: any
   build_verify: ^3.1.0
   custom_lint: any
+  flutter_gen: ^5.8.0
+  flutter_gen_runner: ^5.8.0
   flutter_test:
     sdk: flutter
   freezed: any
@@ -48,3 +55,13 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  # Assets & Fonts
+  assets:
+    - assets/images/
+
+flutter_gen:
+  output: lib/src/gen/assets
+  assets:
+    outputs:
+      package_parameter_enabled: true
