--- a/apps/app/slang.yaml
+++ b/apps/app/slang.yaml
@@ -9,6 +9,11 @@ lazy: false
 # Config
 imports:
   - "package:flutter/material.dart"
+  - "package:cores_domain/goods.dart"
 contexts:
   ThemeMode:
+    generate_enum: false
+  GoodsSortKey:
+    generate_enum: false
+  SortOrder:
     generate_enum: false
