--- a/melos.yaml
+++ b/melos.yaml
@@ -20,6 +20,7 @@ command:
       intl: any
       json_annotation: any
       logger: any
+      riverpod: ^2.6.1
       riverpod_annotation: ^2.6.1
       slang: ^4.1.0
       slang_flutter: ^4.1.0
