♻️generete: melos bs

--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   device_preview: ^1.2.0
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.20.5
+  flutter_hooks: any
   flutter_localizations:
     sdk: flutter
   flutter_settings_ui: ^3.0.1
@@ -43,7 +43,7 @@ dev_dependencies:
   build_verify: ^3.1.0
   custom_lint: any
   flutter_gen: ^5.8.0
-  flutter_gen_runner: ^5.8.0
+  flutter_gen_runner: any
   flutter_test:
     sdk: flutter
   freezed: any
