--- a/packages/infrastructure/mock/pubspec.yaml
+++ b/packages/infrastructure/mock/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   clock: ^1.1.1
-  collection: ^1.19.0
+  collection: any
   cores_domain:
     path: ../../cores/domain
   riverpod: ^2.6.1
