--- a/packages/cores/designsystem/build.yaml
+++ b/packages/cores/designsystem/build.yaml
@@ -1,24 +1,13 @@
 targets:
   $default:
     builders:
-      # freezed:
-      #   # https://github.com/dart-lang/build/blob/master/docs/faq.md#how-do-i-avoid-running-builders-on-unnecessary-inputs
-      #   generate_for:
-      #     include:
-      #       - lib/{entity,**/entity}/**.dart
-      #       - lib/{value_object,**/value_object}/**.dart
-      #       - lib/{model,**/model}/**.dart
-      # https://github.com/google/json_serializable.dart/tree/master/json_serializable#build-configuration
-      json_serializable:
+      freezed:
+        # https://github.com/dart-lang/build/blob/master/docs/faq.md#how-do-i-avoid-running-builders-on-unnecessary-inputs
         generate_for:
           include:
             - lib/{entity,**/entity}/**.dart
             - lib/{value_object,**/value_object}/**.dart
             - lib/{model,**/model}/**.dart
-        options:
-          field_rename: snake
-          # json のデシリアライズ時に発生する Exception を CheckedFromJsonException にまとめる
-          checked: true
       riverpod_generator:
         generate_for:
           include:
