--- a/apps/catalog/pubspec.yaml
+++ b/apps/catalog/pubspec.yaml
@@ -14,14 +14,14 @@ dependencies:
     sdk: flutter
   flutter_test:
     sdk: flutter
-  widgetbook: ^3.7.1
-  widgetbook_annotation: ^3.1.0
+  widgetbook: any
+  widgetbook_annotation: any
 
 dev_dependencies:
-  build_runner: any
-  custom_lint: any
+  build_runner: ^2.4.14
+  custom_lint: ^0.7.0
   pedantic_mono: any
-  widgetbook_generator: ^3.7.0
+  widgetbook_generator: any
 
 flutter:
   uses-material-design: true
