--- a/packages/cores/dependency_override/pubspec.yaml
+++ b/packages/cores/dependency_override/pubspec.yaml
@@ -18,6 +18,6 @@ dependencies:
   riverpod: ^2.6.1
 
 dev_dependencies:
-  custom_lint: null
+  custom_lint: ^0.7.0
   nilts: any
   pedantic_mono: null
