--- a/packages/cores/designsystem/pubspec.yaml
+++ b/packages/cores/designsystem/pubspec.yaml
@@ -36,8 +36,8 @@ dependencies:
   url_launcher: null
 
 dev_dependencies:
-  build_runner: null
-  custom_lint: null
+  build_runner: ^2.4.14
+  custom_lint: ^0.7.0
   flutter_gen_runner: null
   flutter_test:
     sdk: flutter
