--- a/packages/cores/domain/pubspec.yaml
+++ b/packages/cores/domain/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   freezed_annotation: null
   intl: null
+  json_annotation: null
   logger: null
   riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
@@ -18,6 +19,7 @@ dev_dependencies:
   build_runner: null
   custom_lint: null
   freezed: null
+  json_serializable: null
   nilts: any
   pedantic_mono: null
   riverpod_generator: ^2.6.1
