--- a/packages/infrastructure/firebase/pubspec.yaml
+++ b/packages/infrastructure/firebase/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   version: ^3.0.2
 
 dev_dependencies:
-  build_runner: null
+  build_runner: ^2.4.14
   flutter_test:
     sdk: flutter
   json_serializable: null
