--- a/melos.yaml
+++ b/melos.yaml
@@ -46,6 +46,14 @@ command:
         melos exec --flutter --file-exists="macos/Podfile.lock" -- "cd macos && rm Podfile.lock"
 
 scripts:
+  build_app: melos run build_app_android && melos run build_app_ios
+  build_app_dev: melos run build_app_android_dev && melos run build_app_ios_dev
+
+  build_app_ios: melos exec --scope="flutter_app" -- fvm flutter build ipa --export-options-plist=ExportOptions.plist --dart-define-from-file=flavor/prod.json
+  build_app_ios_dev: melos exec --scope="flutter_app" -- fvm flutter build ipa --export-options-plist=ExportOptions.plist --dart-define-from-file=flavor/dev.json
+  build_app_android: melos exec --scope="flutter_app" -- fvm flutter build appbundle --dart-define-from-file=flavor/prod.json
+  build_app_android_dev: melos exec --scope="flutter_app" -- fvm flutter build appbundle --dart-define-from-file=flavor/dev.json
+
   report_test:
     exec: flutter test --no-pub --machine > test_report.log
     packageFilters:
