🔧chore: animated_toパッケージの追加

--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   adaptive_dialog: ^2.4.0
+  animated_to: ^0.2.0
   cores_dependency_override:
     path: ../../packages/cores/dependency_override
   cores_designsystem:
