--- a/packages/cores/domain/pubspec.yaml
+++ b/packages/cores/domain/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: "none"
 version: 0.0.1
 
 environment:
-  sdk: ^3.6.0
+  sdk: ^3.6.1
 
 dependencies:
   freezed_annotation: null
@@ -16,8 +16,8 @@ dependencies:
   version: null
 
 dev_dependencies:
-  build_runner: null
-  custom_lint: null
+  build_runner: ^2.4.14
+  custom_lint: ^0.7.0
   freezed: null
   json_serializable: null
   nilts: any
