--- a/tools/bricks/brick/hooks/pubspec.yaml
+++ b/tools/bricks/brick/hooks/pubspec.yaml
@@ -1,7 +1,7 @@
 name: brick_hooks
 
 environment:
-  sdk: ^3.3.1
+  sdk: ^3.6.1
 
 dependencies:
-  mason: ">=0.1.0-dev.52 <0.1.0"
+  mason: "^0.1.0"
