--- a/mason.yaml
+++ b/mason.yaml
@@ -1,11 +1,7 @@
 bricks:
-  cores_package_flutter:
-    path: tools/bricks/cores_package_flutter
-  cores_package_dart:
-    path: tools/bricks/cores_package_dart
-  features_package_core:
-    path: tools/bricks/features_package_core
-  features_package:
-    path: tools/bricks/features_package
+  infrastructure_package_core:
+    path: tools/bricks/infrastructure_package_core
+  infrastructure_package:
+    path: tools/bricks/infrastructure_package
   brick:
     path: tools/bricks/brick
