🐛fix: モノクロスキーマへの対応

--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
     path: ../../packages/cores/domain
   cupertino_icons: null
   device_preview: ^1.2.0
+  dynamic_color: ^1.7.0
   flutter:
     sdk: flutter
   flutter_hooks: any
