--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # https://dart.dev/guides/libraries/private-files
-# Created by `dart pub`
+# Flutter/Dart/Pub related
 /.dart_tool/*
+.flutter-plugins
+.flutter-plugins-dependencies
 
 # IntelliJ related
 /.idea/*
