--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,3 +13,12 @@ dev_dependencies:
   pedantic_mono: any
   yaml: ^3.1.2
   yaml_edit: ^2.2.1
+
+workspace:
+  - apps/app
+  - packages/cores/dependency_override
+  - packages/cores/designsystem
+  - packages/cores/domain
+  - packages/infrastructure/firebase
+  - packages/infrastructure/mock
+  - packages/infrastructure/shared_preferences
