--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ dev_dependencies:
   custom_lint: any
   flutter_lints:
   grinder: ^0.9.5
-  melos: ^6.2.0
+  melos: ^7.0.0-dev.7
   nilts: any
   path: ^1.9.0
   pedantic_mono: any
