🔧chore: Flutterのアップグレードに伴い、ビルド時に作成される追加ファイルの除外設定を追加

--- a/apps/app/android/.gitignore
+++ b/apps/app/android/.gitignore
@@ -17,6 +17,7 @@ app/src/main/res/drawable*/ic_launcher*.png
 app/src/main/res/mipmap*/ic_launcher*.png
 app/src/main/res/mipmap*/ic_launcher*.xml
 app/src/main/res/values/colors.xml
+.cxx
 
 # Firebase (temporary)
 app/google-services.json
