--- a/.github/workflows/flutter_test.yaml
+++ b/.github/workflows/flutter_test.yaml
@@ -9,7 +9,7 @@ on:
       - main
 jobs:
   flutter_test:
-    # if: ${{ false }}
+    if: ${{ false }}
     name: 🧪Test
     runs-on: ubuntu-latest
     # runs-on: windows-latest
