--- a/packages/infrastructure/firebase/pubspec.yaml
+++ b/packages/infrastructure/firebase/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   cloud_firestore: null
   cloud_functions: null
   collection: null
-  cores_domain:
+  domain:
     path: ../../cores/domain
   firebase_analytics: null
   firebase_app_check: null
