--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,9 +5,9 @@ environment:
 
 workspace:
   - apps/app
-  - packages/cores/dependency_override
-  - packages/cores/designsystem
-  - packages/cores/domain
+  - packages/dependency_override
+  - packages/designsystem
+  - packages/domain
   - packages/infrastructure/firebase
   - packages/infrastructure/mock
   - packages/infrastructure/shared_preferences
@@ -23,7 +23,7 @@ dev_dependencies:
   yaml: ^3.1.2
   yaml_edit: ^2.2.1
 
-melos: 
+melos:
   sdkPath: .fvm/flutter_sdk
 
   command:
