--- a/tools/bricks/infrastructure_package_core/__brick__/packages/infrastructure/{{package_name.snakeCase()}}/pubspec.yaml
+++ b/tools/bricks/infrastructure_package_core/__brick__/packages/infrastructure/{{package_name.snakeCase()}}/pubspec.yaml
@@ -1,6 +1,6 @@
 name: infrastructure_{{package_name.snakeCase()}}
 description: "This package provides {{package_name.snakeCase()}}."
-publish_to: 'none'
+publish_to: "none"
 version: 0.0.1
 
 environment:
@@ -9,20 +9,17 @@ environment:
 
 dependencies:
   collection:
-  cores_core:
-    path: ../../cores/core
-  freezed_annotation: 
-  riverpod: 
-  riverpod_annotation: 
+  core:
+    path: ../../core
+  freezed_annotation:
+  riverpod:
+  riverpod_annotation:
 
 dev_dependencies:
-  build_runner: 
-  custom_lint: 
+  build_runner:
+  custom_lint:
   freezed: ^2.4.7
-  json_serializable: 
-  nilts: any
-  pedantic_mono: 
-  riverpod_generator: 
-  riverpod_lint: 
+  json_serializable:
+  riverpod_generator:
 
 resolution: workspace
