♻️refactor: coreパッケージのリネーム
詳細:
- 機能を基により具体的な名称のパッケージ名に変更

--- a/packages/foundation/pubspec.yaml
+++ b/packages/foundation/pubspec.yaml
@@ -1,4 +1,4 @@
-name: packages_core
+name: packages_foundation
 description: "This package provides core features of app."
 publish_to: "none"
 version: 0.0.1
