--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -27,31 +27,31 @@ dependencies:
   flutter_settings_ui: ^3.0.1
   freezed_annotation: any
   gap: any
-  go_router: any
-  hooks_riverpod: ^2.6.1
+  go_router: ^17.0.1
+  hooks_riverpod: ^3.1.0
   intl: any
   json_annotation: any
   material_design_icons_flutter: ^7.0.7296
   nested: null
   package_info_plus: ^8.2.1
-  riverpod_annotation: ^2.6.1
+  riverpod_annotation: ^4.0.0
   settings_ui: ^2.0.2
-  slang: ^4.1.0
-  slang_flutter: ^4.1.0
+  slang: ^4.11.1
+  slang_flutter: ^4.11.0
   version: null
 
 dev_dependencies:
-  build_runner: ^2.4.14
+  build_runner: ^2.10.4
   build_verify: ^3.1.0
   flutter_gen: ^5.8.0
   flutter_gen_runner: any
   flutter_test:
     sdk: flutter
-  freezed: any
-  go_router_builder: ^2.4.1
+  freezed: ^3.2.4
+  go_router_builder: ^4.1.3
   icons_launcher: any
   json_serializable: any
-  riverpod_generator: ^2.6.1
+  riverpod_generator: ^4.0.0
 
 flutter:
   uses-material-design: true
