--- a/packages/designsystem/pubspec.yaml
+++ b/packages/designsystem/pubspec.yaml
@@ -21,29 +21,29 @@ dependencies:
   freezed_annotation: null
   gap: null
   gauge_indicator: null
-  hooks_riverpod: ^2.6.1
+  hooks_riverpod: ^3.1.0
   linked_scroll_controller: null
   material_color_utilities: null
   nested: null
   responsive_framework: ^1.5.1
-  riverpod_annotation: ^2.6.1
+  riverpod_annotation: ^4.0.0
   shimmer: null
-  slang: ^4.1.0
-  slang_flutter: ^4.1.0
+  slang: ^4.11.1
+  slang_flutter: ^4.11.0
   sliver_tools: null
   store_redirect: ^2.0.3
   theme_tailor_annotation: null
   url_launcher: null
 
 dev_dependencies:
-  build_runner: ^2.4.14
+  build_runner: ^2.10.4
 
   flutter_gen_runner: null
   flutter_test:
     sdk: flutter
-  freezed: null
+  freezed: ^3.2.4
 
-  riverpod_generator: ^2.6.1
+  riverpod_generator: ^4.0.0
 
   slang_build_runner: ^4.1.0
   theme_tailor: null
