--- a/packages/domain/pubspec.yaml
+++ b/packages/domain/pubspec.yaml
@@ -13,16 +13,16 @@ dependencies:
   logger: null
   packages_foundation:
     path: ../foundation
-  riverpod: ^2.6.1
-  riverpod_annotation: ^2.6.1
+  riverpod: ^3.1.0
+  riverpod_annotation: ^4.0.0
   version: null
 
 dev_dependencies:
-  build_runner: ^2.4.14
+  build_runner: ^2.10.4
 
-  freezed: null
+  freezed: ^3.2.4
   json_serializable: null
 
-  riverpod_generator: ^2.6.1
+  riverpod_generator: ^4.0.0
 
 resolution: workspace
