--- a/packages/foundation/pubspec.yaml
+++ b/packages/foundation/pubspec.yaml
@@ -7,8 +7,8 @@ environment:
   sdk: ^3.10.4
 
 dependencies:
-  logger: ^2.6.2
-  riverpod: ^2.6.1
+  logger: any
+  riverpod: ^3.1.0
   uuid: ^4.5.2
 
 resolution: workspace
