--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ melos:
         collection: any
         flutter_hooks: any
         freezed_annotation: any
-        go_router: any
+        go_router: ^17.0.1
         hooks_riverpod: ^3.1.0
         intl: any
         json_annotation: any
@@ -41,12 +41,13 @@ melos:
         riverpod: ^3.1.0
         riverpod_annotation: ^4.0.0
         slang: ^4.11.1
-        slang_flutter: ^4.11.1
+        slang_flutter: ^4.11.0
       dev_dependencies:
         alchemist: ^0.10.0
         build_runner: ^2.10.4
         flutter_gen_runner: any
-        freezed: any
+        freezed: ^3.2.4
+        go_router_builder: ^4.1.3
         json_serializable: any
         riverpod_generator: ^4.0.0
         slang_build_runner: ^4.1.0
