--- a/apps/app/pubspec.yaml
+++ b/apps/app/pubspec.yaml
@@ -47,7 +47,7 @@ dev_dependencies:
   flutter_gen_runner: any
   flutter_test:
     sdk: flutter
-  freezed: ^3.2.4
+  freezed: any
   go_router_builder: ^4.1.3
   icons_launcher: any
   json_serializable: any
