--- a/packages/domain/pubspec.yaml
+++ b/packages/domain/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.10.4
 
-  freezed: ^3.2.4
+  freezed: any
   json_serializable: null
 
   riverpod_generator: ^4.0.0
