--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,9 @@ workspace:
   - packages/infrastructure/shared_preferences
 
 dev_dependencies:
-  altive_lints: ^2.0.0
+  # altive_lints: ^2.0.0
   flutter_lints: any
   melos: ^7.3.0
-
-dependency_overrides:
-  analyzer: ^9.0.0
 
 melos:
   sdkPath: .fvm/flutter_sdk
@@ -46,7 +43,7 @@ melos:
         alchemist: ^0.10.0
         build_runner: ^2.10.4
         flutter_gen_runner: any
-        freezed: ^3.2.4
+        freezed: any
         go_router_builder: ^4.1.3
         json_serializable: any
         riverpod_generator: ^4.0.0
