--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,5 +84,13 @@
     "editor.defaultFormatter": "DavidAnson.vscode-markdownlint"
   },
   "vscodeGitCommit.template": ["{prefix}: {message}"],
-  "cSpell.words": ["altive", "appbundle", "designsystem", "goldens", "usecase"]
+  "cSpell.words": [
+    "altive",
+    "appbundle",
+    "cupertino",
+    "designsystem",
+    "dynamiccolor",
+    "goldens",
+    "usecase"
+  ]
 }
